--- a/MultiModel_Chat_with_pdf/langchain_multimodal.ipynb
+++ b/MultiModel_Chat_with_pdf/langchain_multimodal.ipynb
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "133b74f6",
       "metadata": {
         "id": "133b74f6"
@@ -40,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "2nDWBTrhn-_M",
       "metadata": {
         "id": "2nDWBTrhn-_M",
@@ -52,7 +52,21 @@
           "output_type": "stream",
           "text": [
             "Note: you may need to restart the kernel to use updated packages.\n",
-            "Note: you may need to restart the kernel to use updated packages.\n",
+            "Note: you may need to restart the kernel to use updated packages.\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "ERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+            "grpcio-status 1.73.0 requires protobuf<7.0.0,>=6.30.0, but you have protobuf 5.29.5 which is incompatible.\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
             "Note: you may need to restart the kernel to use updated packages.\n",
             "Note: you may need to restart the kernel to use updated packages.\n"
           ]
