simple and advanced rag

--- a/Simple_RAG/app.ipynb
+++ b/Simple_RAG/app.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "93711a0e",
    "metadata": {},
    "outputs": [
@@ -230,6 +230,42 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1b823455d23648f5b0da5999515d77ab",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a3f7766e5d894983b4996dd032821a03",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "generation_config.json:   0%|          | 0.00/188 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some parameters are on the meta device because they were offloaded to the disk and cpu.\n",
+      "Device set to use cpu\n"
+     ]
     }
    ],
    "source": [
@@ -286,29 +322,7 @@
    "execution_count": null,
    "id": "d4792b34",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\nithish.kumar\\AppData\\Local\\Temp\\ipykernel_14924\\1948462264.py:9: LangChainDeprecationWarning: The method `BaseLLM.__call__` was deprecated in langchain-core 0.1.7 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
-      "  rewritten = llm(rewrite_prompt)\n",
-      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
-     ]
-    },
-    {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (<string>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "Traceback \u001b[36m(most recent call last)\u001b[39m:\n",
-      "  File \u001b[92mc:\\Users\\nithish.kumar\\envs\\langchain\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:3699\u001b[39m in \u001b[95mrun_code\u001b[39m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  Cell \u001b[92mIn[6]\u001b[39m\u001b[92m, line 29\u001b[39m\n    answer, sources = enhanced_rag(\"explain attention mechanism\")\n",
-      "\u001b[36m  \u001b[39m\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 13\u001b[39m\u001b[36m in \u001b[39m\u001b[35menhanced_rag\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mfor q in eval(rewritten):\u001b[39m\n",
-      "  \u001b[36mFile \u001b[39m\u001b[32m<string>:2\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mGiven the original query: explain attention mechanism\u001b[39m\n    ^\n\u001b[31mIndentationError\u001b[39m\u001b[31m:\u001b[39m unexpected indent\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Advanced Query Handling\n",
     "def enhanced_rag(question):\n",
